--- a/Exms/16.LinearDataStruc/LinearDataStructures.csproj
+++ b/Exms/16.LinearDataStruc/LinearDataStructures.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>_1.CustomArrayList</RootNamespace>
+    <RootNamespace>_16.LinearDataStructures</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
